--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">News pro</string>
+    <style name="ToolbarBackground">
+        <item name="android:background">#c91060</item>
+    </style>
 </resources>
